--- a/website/pages/docs/llm/parameters.mdx
+++ b/website/pages/docs/llm/parameters.mdx
@@ -8,7 +8,7 @@ import { Callout, Tabs, Tab } from 'nextra-theme-docs'
     <code>ILlmSchema</code>,
   ]}>
   <Tab>
-```typescript filename="typia" showLineNumbers {11-16}
+```typescript filename="typia" showLineNumbers {20-25}
 export namespace llm {
   // LLM FUNCTION CALLING APPLICATION SCHEMA
   export function application<
@@ -18,6 +18,15 @@ export namespace llm {
   >(
     options?: Partial<Pick<ILlmApplication.IOptions<Model>, "separate">>,
   ): ILlmApplication<Model>;
+
+  // +VALIDATE FUNCTION EMBEDDED
+  export function applicationOfValidate<
+    App extends Record<string, any>,
+    Model extends ILlmSchema.Model,
+    Config extends Partial<ILlmSchema.ModelConfig[Model]> = {},
+  >(
+    options?: Partial<Pick<ILlmApplicationOfValidate.IOptions<Model>, "separate">>,
+  ): ILlmApplicationOfValidate<Model>;
 
   // STRUCTURED OUTPUT
   export function parameters<
@@ -303,6 +312,101 @@ export namespace ILlmSchema {
    */
   export type IConfig<Model extends ILlmSchema.Model = ILlmSchema.Model> =
     ILlmSchema.ModelConfig[Model];
+}
+```
+  </Tab>
+  <Tab>
+```typescript filename="typia" showLineNumbers
+import { ILlmApplication, ILlmFunction, ILlmSchema } from "@samchon/openapi";
+
+import { IValidation } from "../../IValidation";
+
+/**
+ * Application of LLM function calling with validators.
+ *
+ * `ILlmApplication` is a data structure representing a collection of
+ * {@link ILlmFunctionOfValidate LLM function calling schemas}, composed from a native
+ * TypeScript class (or interface) type by the `typia.llm.applicationOfValidate<App, Model>()`
+ * function.
+ *
+ * If you put the returned {@link ILlmApplicationOfValidate.functions} objects to the
+ * LLM provider like [OpenAI (ChatGPT)](https://openai.com/), the LLM will automatically
+ * select the proper function and fill its arguments from the conversation
+ * (maybe chatting text) with user (human). This is the concept of the LLM function calling.
+ *
+ * Additionally, the LLM function calling sometimes take a mistake that composing wrong typed
+ * {@link ILlmFunctionOfValidate.parameters}. In that case, deliver return value of the
+ * {@link ILlmFunctionOfValidate.validate} function, then LLM provider will correct the
+ * parameters at the next conversation. The {@link ILlmFunctionOfValidate.validate} function
+ * is a validator function reporting the detailed information about the wrong typed parameters.
+ *
+ * By the way, there can be some parameters (or their nested properties) which must be
+ * composed by Human, not by LLM. File uploading feature or some sensitive information
+ * like secrety key (password) are the examples. In that case, you can separate the
+ * function parameters to both LLM and human sides by configuring the
+ * {@link ILlmApplication.IOptions.separate} property. The separated parameters are
+ * assigned to the {@link ILlmFunction.separated} property.
+ *
+ * For reference, when both LLM and Human filled parameter values to call, you can
+ * merge them by calling the {@link HttpLlm.mergeParameters} function. In other words,
+ * if you've configured the {@link ILlmApplication.IOptions.separate} property, you
+ * have to merge the separated parameters before the funtion call execution.
+ *
+ * @reference https://platform.openai.com/docs/guides/function-calling
+ * @author Jeongho Nam - https://github.com/samchon
+ */
+export interface ILlmApplicationOfValidate<Model extends ILlmSchema.Model>
+  extends ILlmApplication<Model> {
+  /**
+   * List of function metadata.
+   *
+   * List of function metadata that can be used for the LLM function call.
+   *
+   * Also, every functions have their own parameters validator
+   * {@link ILlmFunctionOfValidate.validate}. If the LLM function calling composes wrong
+   * typed parameters, then deliver return value of it, then LLM will correct parameters
+   * at the next conversation.
+   */
+  functions: ILlmFunctionOfValidate<Model>[];
+}
+export namespace ILlmApplicationOfValidate {
+  export import IOptions = ILlmApplication.IOptions;
+}
+
+/**
+ * LLM function metadata with validator.
+ *
+ * `ILlmFunctionOfValidate` is an interface representing a function metadata,
+ * which has been used for the LLM (Language Large Model) function
+ * calling. Also, it's a function structure containing the function
+ * {@link name}, {@link parameters} and {@link output return type}.
+ *
+ * If you provide this `ILlmFunctionOfValidate` data to the LLM provider like "OpenAI",
+ * the "OpenAI" will compose a function arguments by analyzing conversations
+ * with the user. With the LLM composed arguments, you can execute the function
+ * and get the result.
+ *
+ * If the LLM function calling take s a mistake that composing wrong typed
+ * {@link parameters}, you can correct the parameters by delivering the return
+ * value of the {@link validate} function. The {@link validate} function is a
+ * validator function reporting the detailed information about the wrong typed
+ * {@link parameters}.
+ *
+ * By the way, do not ensure that LLM will always provide the correct arguments.
+ * The LLM of present age is not perfect, and sometimes takes a mistake that composing
+ * wrong typed {@link parameters}. In that case, you can correc the parameters by
+ * delivering the return value of the {@link validate} function. The {@link validate}
+ * function reports the detailed information about the wrong typed {@link parameters},
+ *
+ * @reference https://platform.openai.com/docs/guides/function-calling
+ * @author Jeongho Nam - https://github.com/samchon
+ */
+export interface ILlmFunctionOfValidate<Model extends ILlmSchema.Model>
+  extends ILlmFunction<Model> {
+  validate(props: object): IValidation<unknown>;
+}
+export namespace ILlmFunctionOfValidate {
+  export import ISeparated = ILlmFunction.ISeparated;
 }
 ```
   </Tab>
