--- a/website/pages/docs/misc.mdx
+++ b/website/pages/docs/misc.mdx
@@ -50,6 +50,7 @@ export namespace IValidation {
   export interface IFailure {
     success: false;
     errors: IError[];
+    data: unknown;
   }
   export interface IError {
     path: string;
@@ -611,11 +612,11 @@ export namespace IValidation {
   export interface ISuccess<T = unknown> {
     success: true;
     data: T;
-    errors: [];
   }
   export interface IFailure {
     success: false;
     errors: IError[];
+    data: unknown;
   }
   export interface IError {
     path: string;
@@ -1115,6 +1116,7 @@ export namespace IValidation {
   export interface IFailure {
     success: false;
     errors: IError[];
+    data: unknown;
   }
   export interface IError {
     path: string;
@@ -1338,6 +1340,7 @@ export namespace IValidation {
   export interface IFailure {
     success: false;
     errors: IError[];
+    data: unknown;
   }
   export interface IError {
     path: string;
@@ -1559,6 +1562,7 @@ export namespace IValidation {
   export interface IFailure {
     success: false;
     errors: IError[];
+    data: unknown;
   }
   export interface IError {
     path: string;
@@ -1840,6 +1844,7 @@ export namespace IValidation {
   export interface IFailure {
     success: false;
     errors: IError[];
+    data: unknown;
   }
   export interface IError {
     path: string;
@@ -2107,6 +2112,7 @@ export namespace IValidation {
   export interface IFailure {
     success: false;
     errors: IError[];
+    data: unknown;
   }
   export interface IError {
     path: string;
