--- a/website/pages/docs/validators/validate.mdx
+++ b/website/pages/docs/validators/validate.mdx
@@ -24,6 +24,7 @@ export namespace IValidation {
   export interface IFailure {
     success: false;
     errors: IError[];
+    data: unknown;
   }
   export interface IError {
     path: string;
@@ -226,6 +227,7 @@ export namespace IValidation {
   export interface IFailure {
     success: false;
     errors: IError[];
+    data: unknown;
   }
   export interface IError {
     path: string;
@@ -442,6 +444,7 @@ export namespace IValidation {
   export interface IFailure {
     success: false;
     errors: IError[];
+    data: unknown;
   }
   export interface IError {
     path: string;
@@ -668,6 +671,7 @@ export namespace IValidation {
   export interface IFailure {
     success: false;
     errors: IError[];
+    data: unknown;
   }
   export interface IError {
     path: string;
