--- a/website/pages/docs/json/stringify.mdx
+++ b/website/pages/docs/json/stringify.mdx
@@ -39,6 +39,7 @@ export namespace IValidation {
   export interface IFailure {
     success: false;
     errors: IError[];
+    data: unknown;
   }
   export interface IError {
     path: string;
@@ -240,6 +241,7 @@ export namespace IValidation {
   export interface IFailure {
     success: false;
     errors: IError[];
+    data: unknown;
   }
   export interface IError {
     path: string;
